<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/your_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_margin="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:checked="true"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:checked="true"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_margin="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>